css/main.css
/* ... */
#headerblock .logo        { position: absolute; top: 5px; left: 5px; width: 90px; height: 90px; }

#headerimg a              { text-decoration: none; color: #000; }

#headertext a             { text-decoration: none; color: #000; }
#headertext a:hover       { outline: 0; color: #444; }
#headertext a:active      { outline: 0; color: #444; }
#headertext a:focus       { outline: 0; color: #444; }
#headertext h1            { white-space:nowrap; font-size: 40px; font-weight: 700; line-height: 50px; padding: 0px; margin: 0px; background-repeat: no-repeat; text-shadow: 0px 3px 0px #EEE; }
#headertext h2            { white-space:nowrap; font-size: 20px; font-weight: 700; margin: 0px; padding: 0px; line-height: 30px; }

#headernav                { position: absolute; top: 78px; right: 5px; text-align: right; line-height: 20px;  }

#navigation a             { text-decoration: none; color: #000; }
#navigation table         { border-width: 0px; border-style: solid; border-collapse: collapse; vertical-align: middle; }
#navigation th            { border-width: 0px; border-style: solid; border-collapse: collapse; padding: 0.3em; }
#navigation td            { border-width: 0px; border-style: solid; border-collapse: collapse; padding: 0.3em; }

/* #main li                  { padding-bottom: 5px; padding-top: 3px; } */

#construction             { background-color: #888888; padding-bottom: 30px; padding-left: 40px; padding-right: 0px; }

.contact table            { border-width: 0px; border-style: solid; border-collapse: collapse; vertical-align: middle; }
.contact th               { border-width: 0px; border-style: solid; border-collapse: collapse; padding: 0.3em; }
.contact td               { border-width: 0px; border-style: solid; border-collapse: collapse; padding: 0.3em; }

.highlight                { text-align:center; background-color: yellow; }

.indent                   { padding-left: 20px; }

.diff-navigate            { height: 20px; vertical-align: top; }

.clearing                 { clear: both; }

.attention                { background-color: yellow; }

.results-tableheaderrow   { background-color: #bbbbbb; }
.results-tablerow         { background-color: white;   }
.results-name             { text-align:left; white-space:nowrap; }
.results-text             { text-align:left; }
.results-region           { text-align:left;   }
.results-network          { text-align:left;   }
.results-datadate         { text-align:center; }
.results-number           { text-align:right; }
.results-analyzed         { text-align:center; }
.results-analyzed-old     { text-align:center; }
.results-analyzed-new     { text-align:center; background-color: orange; }
.results-discussion       { text-align:left; white-space:nowrap; }
.results-route            { text-align:left; white-space:nowrap; }

#gtfsmap                  { height: 730px; width: 50%; float: left; margin-top: 16px; margin-bottom: 16px; margin-right: 0.8%; }

.gtfs-intro               { float:left; max-width:47.6% }
.gtfs-tableheaderrow      { background-color: #bbbbbb;   }
.gtfs-tablerow            { background-color: white;     }
.gtfs-tablerowalt         { background-color: #efefef; }
.gtfs-name                { text-align:left; white-space:nowrap; }
.gtfs-stop-name           { text-align:left; white-space:nowrap; }
.gtfs-number              { text-align:center; }
.gtfs-lat                 { text-align:center; }
.gtfs-lon                 { text-align:center; }
.gtfs-distance            { text-align:right;  }
.gtfs-id                  { text-align:center; }
.gtfs-date                { text-align:center; }
.gtfs-dateold             { text-align:center; background-color: orange; }
.gtfs-datenew             { text-align:center; background-color: lightgreen; }
.gtfs-datenewer           { text-align:center; background-color: limegreen; }
.gtfs-dateverynew         { text-align:center; background-color: green; }
.gtfs-datevalid           { text-align:center; }                                                          /* GTFS data from current data set has valid date */
.gtfs-datefuture          { text-align:center; background-color: lightgreen; }                          /* GTFS data from current or long-term data set is in the future */
.gtfs-datepast            { text-align:center; background-color: orange; }                              /* GTFS data from current or long-term data set is in the past */
.gtfs-dateltvalid         { text-align:center; background-color: green; }                               /* GTFS data from long-term data set has a valid date */
.gtfs-dateprevious        { text-align:center; background-color: rgb(128, 128, 255); color: #fff; }   /* GTFS data is from the previous data set */
.gtfs-version             { text-align:center; }
.gtfs-text                { text-align:left;   }
.gtfs-checkbox            { text-align:center; }
.gtfs-radiobox            { text-align:center; }
.gtfs-comment             { text-align:left;   }
.gtfs-whitetext           { color:white;     }
.shape-lat                { text-align:center; }
.shape-lon                { text-align:center; }
.bad-link                 { text-decoration: line-through; background-color: yellow; }

#feeds-table              { border-width: 0px; border-style: solid; border-collapse: collapse; vertical-align: middle; }
#versions-table           { border-width: 0px; border-style: solid; border-collapse: collapse; vertical-align: middle; }
#routes-table             { border-width: 0px; border-style: solid; border-collapse: collapse; vertical-align: middle; }
#trips-table              { border-width: 0px; border-style: solid; border-collapse: collapse; vertical-align: middle; }
#shapes-table             { border-width: 0px; border-style: solid; border-collapse: collapse; vertical-align: middle; }
.compare table            { border-width: 0px; border-style: solid; border-collapse: collapse; vertical-align: middle; }
/* ... */

